<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="?colorPrimary"
        app:subtitleTextColor="@color/white"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:padding="@dimen/min_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/min_margin"
                android:text="Title"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />
        </RelativeLayout>

    </android.support.v7.widget.Toolbar>


    <Button
        android:id="@+id/student_information_button"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_above="@id/administrative_financial_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margin"
        android:background="@drawable/button_bg"
        android:text="@string/studentInformation"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_button"
        android:textStyle="bold" />

    <Button
        android:id="@+id/administrative_financial_button"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_centerInParent="true"
        android:background="@drawable/button_bg"
        android:text="@string/administrative_financial"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_button"
        android:textStyle="bold" />

    <Button
        android:id="@+id/assessment_button"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_below="@id/administrative_financial_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin"
        android:background="@drawable/button_bg"
        android:text="@string/assessment"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_button"
        android:textStyle="bold" />


    <Button
        android:id="@+id/exit_button"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_below="@id/assessment_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin"
        android:background="@drawable/button_bg"
        android:text="@string/exit"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_button"
        android:textStyle="bold" />


</RelativeLayout>