<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/main_bg">

    <ImageView
        android:id="@+id/up_border"

        android:layout_width="@dimen/up_and_down_size"
        android:layout_height="@dimen/up_and_down_size"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/upanddown" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/stnoContainer"
        android:layout_width="@dimen/pass_stno_width"
        android:layout_height="wrap_content"
        android:layout_below="@id/up_border"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/margin"
        android:textColorHint="@color/white">

        <EditText
            android:id="@+id/stnoEditText"
            android:layout_width="@dimen/pass_stno_width"
            android:layout_height="wrap_content"
            android:ems="20"
            android:gravity="start"
            android:hint="@string/stnoHintEdiText"
            android:inputType="numberDecimal"
            android:padding="@dimen/pading_in_text_container"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/text_size"
            android:textStyle="bold" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/passContainer"
        android:layout_width="@dimen/pass_stno_width"
        android:layout_height="wrap_content"
        android:layout_below="@id/stnoContainer"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/margin"
        android:textColorHint="@color/white">

        <EditText
            android:id="@+id/passEditText"
            android:layout_width="@dimen/pass_stno_width"
            android:layout_height="wrap_content"
            android:ems="30"
            android:gravity="start"
            android:hint="@string/passHintEdiText"
            android:inputType="numberPassword"
            android:padding="@dimen/pading_in_text_container"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/text_size"
            android:textStyle="bold" />

    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/login_button"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@id/passContainer"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/margin"
        android:background="@drawable/button"
        android:padding="@dimen/pading_in_text_container"
        android:text="@string/logInText"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/down_border"
        android:layout_width="@dimen/up_and_down_size"
        android:layout_height="@dimen/up_and_down_size"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/upanddown" />

</RelativeLayout>